# CodedInference

./: accuracy.ipynb  comm.py  exponential_test copy.ipynb  functions.py  latency_summary copy.ipynb  master.py  master_m.py  model_segments.py  model_utils.py  pyproject.toml  requirementswin.txt  results.md  run_test.sh  test_auto_segment_model.ipynb  util.py  worker.py
models/: middle.py
old/: cmd_util.py  comm.py  util.py
test/: test_auto_segment_model.ipynb  test_nlcc_models.ipynb
test_results/: result_n1_k1_r0_f0_rep10_local_ops.json  result_n1_k1_r0_f0_rep10_segment_details.json  result_n1_k1_r0_f0_rep10_total_run.json  result_n3_k2_r1_f0_rep10_local_ops.json  result_n3_k2_r1_f0_rep10_segment_details.json  result_n3_k2_r1_f0_rep10_total_run.json  result_n3_k2_r1_f1_rep10_local_ops.json  result_n3_k2_r1_f1_rep10_segment_details.json  result_n3_k2_r1_f1_rep10_total_run.json  result_n4_k3_r1_f1_rep10_local_ops.json  result_n4_k3_r1_f1_rep10_segment_details.json  result_n4_k3_r1_f1_rep10_total_run.json  result_n4_k4_r0_f0_rep10_local_ops.json  result_n4_k4_r0_f0_rep10_segment_details.json  result_n4_k4_r0_f0_rep10_total_run.json  result_n5_k4_r1_f0_rep10_local_ops.json  result_n5_k4_r1_f0_rep10_segment_details.json  result_n5_k4_r1_f0_rep10_total_run.json  result_n5_k4_r1_f1_rep10_local_ops.json  result_n5_k4_r1_f1_rep10_segment_details.json  result_n5_k4_r1_f1_rep10_total_run.json  result_n6_k4_r2_f0_rep10_local_ops.json  result_n6_k4_r2_f0_rep10_segment_details.json  result_n6_k4_r2_f0_rep10_total_run.json  result_n6_k4_r2_f0_rep2_local_ops.json  (+20 more)
(+78 files in other folders)
