[project]
dependencies = []
name = "CodedInference"
requires-python = "== 3.8.*"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
codedinference = { path = ".", editable = true }
torch = { index = "https://download.pytorch.org/whl/cpu" }


[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=1.24.4,<2"
tqdm = ">=4.67.1,<5"
ipykernel = ">=6.29.5,<7"
